# advent-of-code-rust

./: .gitignore  Cargo.toml
crates/parser/: Cargo.toml
crates/y2024/: Cargo.toml
crates/y2024/src/: day1.rs  day2.rs  lib.rs
previous/y2020/: day11.rs  day3.rs  day4.rs  day5.rs  day7.rs  day9.rs
previous/y2021/: day2.rs
previous/y2022/: day11.rs  day13.rs  day14.rs  day15.rs  day22.rs  day3.rs  day5.rs  day7.rs  day8.rs
src/: lib.rs  main.rs  parser.rs  y2022.rs
src/y2020/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2021/: day1.rs  day2.rs
src/y2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day9.rs
