[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7.1"
y2024 = { path = "crates/y2024" }

[workspace]
members = ["crates/parser", "crates/y2024"]
